main-frame.css
html {
    scroll-behavior: smooth;
}

.light-theme {
    --primary-background-color: #F7F7F7;

    --secondary-background-color: #F7F7F7;
    --secondary-background-color2: #FFFFFF;

    --ternary-background-color: #E9E9E9;
    --ternary-background-color2: #D6D6D6;

    --text-color: #303030;

    --accent-color: #1973C1;
    --accent-color-hover: #268de8;
    --accent-color-active: #0162b7;

    color-scheme: light;
}
.dark-theme {
    --primary-background-color: #212121;

    --secondary-background-color: #3B3B3B;
    --secondary-background-color2: #3B3B3B;

    --ternary-background-color: #333333;
    --ternary-background-color2: #292929;

    --text-color: #E6E6E6;

    --accent-color: #4DC3FF;
    --accent-color-hover: #76d1ff;
    --accent-color-active: #35aae5;

    color-scheme: dark;
}

body {
    --content-max-width: 1400px;
    --content-gap: clamp(80px, calc(100dvh * 0.168421053), 160px);
    --icon-gap: 16px;
    --icon-height: 48px;
    --icon-text-size: 36px;
    --icon-text-weight: 700;
    --navigation-gap: 32px;
    --navigation-root-padding-vertical: 32px;
    --navigation-text-size: 20px;
    --navigation-padding-horizontal: 16px;
    --navigation-padding-vertical: 12px;
    --h1-font-size: 48px;
    --h2-font-size: 36px;
    --h6-font-size: 32px;
    --p-font-size: 16px;
    --accent-button-font-size: 24px;

    --color-theme-duration: .333s;

    --section-gap-horizontal: 64px;
    --section-gap-vertical: 24px;

    --action-button-font-size: 24px;

    
    font-family: 'Figtree', sans-serif;
    font-weight: 400;
    font-size: 16px;
    word-wrap: break-word;
    transition: background-color ease-out, color ease-out;
    transition-duration: var(--color-theme-duration);

    display: flex;
    justify-content: center;
    width: 100%;
    margin: 0;
    box-sizing: border-box;

    background-color: var(--primary-background-color);
    color: var(--text-color);
}

body > .body-wrapper {
    max-width: var(--content-max-width);
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    gap: var(--content-gap);
    margin-bottom: var(--navigation-root-padding-vertical);
}

.no-scroll {
    overflow: hidden;
}

